src/test/ui/const-generics/issues/issue-61935.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-61935.rs:10:23
   |
LL |         Self:FooImpl<{N==0}>
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: aborting due to previous error

